# controllers/common.go
@@ -1,0 +1,5 @@
+package controllers
+
+type HTTPError struct {
+	Error string `json:"error"`
+}
