# docs/swagger.json
@@ -49,12 +49,26 @@
                         "schema": {
                             "$ref": "#/definitions/controllers.loginResponseOK"
                         }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/controllers.HTTPError"
+                        }
                     }
                 }
             }
         }
     },
     "definitions": {
+        "controllers.HTTPError": {
+            "type": "object",
+            "properties": {
+                "error": {
+                    "type": "string"
+                }
+            }
+        },
         "controllers.loginResponseOK": {
             "type": "object",
             "properties": {
